--- a/index.html
+++ b/index.html
@@ -92,8 +92,46 @@
 				Slide 3
 			</div>
         </div>
-        <div class="swiper-slide" style="background:#4dff91;">
-            Slide 4
+        <div class="swiper-slide">
+            <div class="page4_content">
+                <div class="page4_top">
+                    <div  id="page4_top_left" class="page4_top_left">
+                    </div>
+                    <div class="page4_top_right">
+                        <ol class="rounded-list">
+                            <li>
+                                <p class = "page4_list1 page4_list ani" swiper-animate-effect="bounceInRight" swiper-animate-duration="1s" swiper-animate-delay="1s">最好的高校</p>
+                            </li>
+                                <p class = "page4_list2 page4_list_content ani" swiper-animate-effect="bounceInRight" swiper-animate-duration="1s" swiper-animate-delay="2.5s">HEC</p>
+                            <li>
+                                <p class = "page4_list3 page4_list ani" swiper-animate-effect="bounceInRight" swiper-animate-duration="1s" swiper-animate-delay="1.5s">最好的工程师学校</p>
+                            </li>
+                                <p class = "page4_list4 page4_list_content ani" swiper-animate-effect="bounceInRight" swiper-animate-duration="1s" swiper-animate-delay="2.5s">Paristah</p>
+                            <li>
+                                <p class = "page4_list5 page4_list ani" swiper-animate-effect="bounceInRight" swiper-animate-duration="1s" swiper-animate-delay="2s">最好的政治学校</p>
+                            </li>
+                                <p class = "page4_list6 page4_list_content ani" swiper-animate-effect="bounceInRight" swiper-animate-duration="1s" swiper-animate-delay="2.5s">Science Ro</p>
+                        </ol>
+                    </div>
+                </div>
+                <div class="page4_down">
+                    <div class="page4_down_left">
+                        <p class = "page4_button1 page4_button ani" swiper-animate-effect="bounceInLeft" swiper-animate-duration="1s" swiper-animate-delay="1s">学制</p>
+                        <p class = "page4_button2 page4_button ani" swiper-animate-effect="bounceInLeft" swiper-animate-duration="1s" swiper-animate-delay="1.5s">实习</p>
+                        <p class = "page4_button3 page4_button ani" swiper-animate-effect="bounceInLeft" swiper-animate-duration="1s" swiper-animate-delay="2s">学费</p>
+                        <p class = "page4_button4 page4_button ani" swiper-animate-effect="bounceInLeft" swiper-animate-duration="1s" swiper-animate-delay="2.5s">排名</p>
+                    </div>
+                    <div class="page4_down_right">
+						<p class="page4_down_right_title ani" swiper-animate-effect="bounceInDown" swiper-animate-duration="1s" swiper-animate-delay="3s">五个择校的理由</p>
+						<div class="page4_down_right_circle ani" swiper-animate-effect="fadeIn" swiper-animate-duration="1s" swiper-animate-delay="4s"></div>
+						<div class="page4_down_right_reason page4_down_right_reason1 ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="1s" swiper-animate-delay="4s">食堂好</div>
+						<div class="page4_down_right_reason page4_down_right_reason2 ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="1s" swiper-animate-delay="4s">有钱途</div>
+						<div class="page4_down_right_reason page4_down_right_reason3 ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="1s" swiper-animate-delay="4s">有妹子</div>
+						<div class="page4_down_right_reason page4_down_right_reason4 ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1s" swiper-animate-delay="4s">有妹子</div>
+						<div class="page4_down_right_reason page4_down_right_reason5 ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1s" swiper-animate-delay="4s">有妹子</div>
+                	</div>
+            	</div>
+        	</div>
         </div>
         <div class="swiper-slide" style="background: aquamarine;">
 			<div class="page5_up">
@@ -129,6 +167,7 @@
 <script src="js/jquery-1.10.1.min.js"></script>
 <script src="js/swiper3.07.min.js"></script>
 <script src="js/swiper.animate1.0.2.min.js"></script>
+<script src="js/canvasjs.min.js"></script>
 <script src="js/myjs.js"></script>
 
 </body>
