page5 duang~ duang~ duang~ (^_^).

--- a/index.html
+++ b/index.html
@@ -134,29 +134,38 @@
         	</div>
         </div>
         <div class="swiper-slide" style="background: aquamarine;">
-			<div class="page5_up">
-				<div class="page5_up_1"> </div>
-				<div class="page5_up_2"> </div>
-			</div>
-			<div class="page5_mid">
-				<div class="page5_mid_5"></div>
-				<div class="page5_mid_1">
-					<img class ="red_balloon ani" src="src/img/red_balloon.png" alt="red_balloon" width="200px" height="200px" swiper-animate-effect="bounceIn" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">
+			<div class="page5_content">
+				<div class="page5_up">
+					<div class="page5_up_1">
+						<img class ="page_2_logo ani" src="src/img/page_2_logo.png " alt="page_2_logo" width="100%" height="100%" swiper-animate-effect="swing" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">
+					</div>
+					<div class="page5_up_2">
+						<img class ="web_addr ani" src="src/img/web_addr.png" alt="web_addr" width="100%" height="100%" swiper-animate-effect="fadeInUp" swiper-animate-duration="1.5s" swiper-animate-delay="2.5s">
+					</div>
 				</div>
-				<div class="page5_mid_2">
-					<img class ="white_balloon ani" src="src/img/white_balloon.png" alt="white_balloon" width="200px" height="200px" swiper-animate-effect="bounceIn" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">
+				<div class="page5_mid">
+					<div class="page5_mid_5">
+						<img class ="wechat_no ani" src="src/img/wechat_no.png" alt="wechat_no" width="100%" height="100%" swiper-animate-effect="fadeInDown" swiper-animate-duration="1.5s" swiper-animate-delay="2.5s">
+					</div>
+					<div class="page5_mid_1">
+						<img class ="red_balloon ani" src="src/img/red_balloon.png" alt="red_balloon" width="200px" height="200px" swiper-animate-effect="bounceIn" swiper-animate-duration="0.5s" swiper-animate-delay="0.6s">
+					</div>
+					<div class="page5_mid_2">
+						<img class ="white_balloon ani" src="src/img/white_balloon.png" alt="white_balloon" width="200px" height="200px" swiper-animate-effect="bounceIn" swiper-animate-duration="0.5s" swiper-animate-delay="0.9s">
+					</div>
+					<div class="page5_mid_3">
+						<img class ="blue_balloon ani" src="src/img/blue_balloon.png" alt="blue_balloon" width="200px" height="200px" swiper-animate-effect="bounceIn" swiper-animate-duration="0.5s" swiper-animate-delay="1.2s">
+					</div>
+					<div class="page5_mid_4">
+						<img class ="page5_tower ani" src="src/img/page5_tower.png" alt="tower" width="250px" height="250px" swiper-animate-effect="bounceInUp" swiper-animate-duration="0.5s" swiper-animate-delay="1.5s">
+					</div>
 				</div>
-				<div class="page5_mid_3">
-					<img class ="blue_balloon ani" src="src/img/blue_balloon.png" alt="blue_balloon" width="200px" height="200px" swiper-animate-effect="bounceIn" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">
-				</div>
-				<div class="page5_mid_4">
-					<img class ="page5_tower ani" src="src/img/page5_tower.png" alt="tower" width="250px" height="250px" swiper-animate-effect="bounceInUp" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">
-				</div>
-			</div>
 
-			<div class="page5_down">
-				<div class="page5_down_1">
-					<p>顶英左岸旗下三角页工作室</p>
+				<div class="page5_down">
+					<div class="page5_down_1">
+						<img class ="telephone_pic ani" src="src/img/telephone_pic.png" alt="telephone_pic" width="40%" height="40%" swiper-animate-effect="tada" swiper-animate-duration="1.0s" swiper-animate-delay="4.0s">
+						<p>顶英左岸旗下三角页工作室</p>
+					</div>
 				</div>
 			</div>
 		</div>
