--- a/index.html
+++ b/index.html
@@ -11,133 +11,83 @@
 <!-- Swiper -->
 <div class="swiper-container">
     <div class="swiper-wrapper">
-        <div class="swiper-slide">
+   		<!-- page1 -->
+		<div class="swiper-slide">
 			<div class="page1_content">
+				<img class ="zuoan_logo ani" src='./img/logo.png' alt="zuoan_logo" swiper-animate-effect="bounceIn" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">
 				<div class="page1_up">
+					<p class = "page1_publicity publicity_1 ani" swiper-animate-effect="bounceInRight" swiper-animate-duration="0.5s" swiper-animate-delay="1.0s">
+						<strong>专注法国留学</strong>
+					</p>
+					<p class = "page1_publicity publicity_2 ani" swiper-animate-effect="bounceInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="1.0s">
+						<strong>留学改变人生</strong>
+					</p>
 				</div>
 				<div class="page1_mid">
-					<!--<img id = "page1_blue_pic" class ="page1_blue_pic" src='./src/img/page_1_blue.jpg'>-->
 					<img id = "page_1_blue" class ="page_1_blue" src='./src/img/page_1_blue.jpg'>
-				</div>
-				<div class="page1_text text1 ani" swiper-animate-effect="zoomIn" swiper-animate-duration="0.5s" swiper-animate-delay="2s">
-					<strong>&nbsp; 一个人的行走&nbsp;</strong>
-				</div>
-				<div class="page1_text text2 ani" swiper-animate-effect="zoomIn" swiper-animate-duration="0.5s" swiper-animate-delay="2.5s">
-					<strong>&nbsp; 想走就走的学习&nbsp;</strong>
-				</div>
-				<div class="page1_text text3 ani" swiper-animate-effect="zoomIn" swiper-animate-duration="0.5s" swiper-animate-delay="3s">
-					<strong>&nbsp; 法国游学 &nbsp;</strong>
-				</div>
-				<div class="page1_text text4 ani" swiper-animate-effect="zoomIn" swiper-animate-duration="0.5s" swiper-animate-delay="3.5s">
-					<strong>&nbsp; 卢浮宫艺术瑰宝&nbsp;</strong>
-				</div>
-				<div class="page1_text text5 ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="4s">
-					<strong>&nbsp; 香榭丽舍大街 &nbsp;</strong>
-				</div>
-				<div class="page1_text text6 ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="0.5s" swiper-animate-delay="4.5s">
-					<strong>&nbsp; 左岸的cafe bar &nbsp;</strong>
 				</div>
 				<div class="page1_down">
 				</div>
 			</div>
         </div>
+		<!-- page2 -->
+		<div class="swiper-slide">
+			<div class="page2_content">
+				<img class ="zuoan_logo ani" src='./img/logo.png' alt="zuoan_logo" swiper-animate-effect="bounceIn" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">
+				<p class = "page2_list ani"id = "page2_list_1" swiper-animate-effect="bounceInLeft" swiper-animate-duration="1.0s" swiper-animate-delay="1.0s">70%直接入读精英院校</p>
+				<p class = "page2_list ani"id = "page2_list_2" swiper-animate-effect="bounceInLeft" swiper-animate-duration="1.5s" swiper-animate-delay="1.0s">30%是法语专业本科生</p>
+				<p class = "page2_list ani"id = "page2_list_3" swiper-animate-effect="bounceInLeft" swiper-animate-duration="2.0s" swiper-animate-delay="1.0s">100%的学生获得了签证</p>
+				<img class ="page2_img1 ani" src='./img/page2_img1.jpg' swiper-animate-effect="rotateInUpLeft" swiper-animate-duration="1.0s" swiper-animate-delay="3.0s">
+				<img class ="page2_img2 ani" src='./img/page2_img2.jpg' swiper-animate-effect="rotateInUpRight" swiper-animate-duration="1.0s" swiper-animate-delay="3.0s">
+				<p class = "page2_list ani"id = "page2_list_4" swiper-animate-effect="bounceInUp" swiper-animate-duration="1.0s" swiper-animate-delay="4.0s">左岸是一种品位</p>
+				<p class = "page2_list ani"id = "page2_list_5" swiper-animate-effect="bounceInUp" swiper-animate-duration="1.0s" swiper-animate-delay="5.0s">左岸是一种情怀</p>
+			</div>
+        </div>
+		<!-- page3 -->
         <div class="swiper-slide">
-			<div class="page2_content">		
-				<img class ="zuoan_logo ani" src='./img/logo.png' alt="zuoan_logo" swiper-animate-effect="bounceIn" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">
-                <div id="page2_white_bk" class="page2_white_bk"></div>
-                <div id="page2_white_flash" class="page2_white_flash"></div>
-				<p class = "page2_title ani" swiper-animate-effect="swing" swiper-animate-duration="2s" swiper-animate-delay="1s">
-					<strong>左岸是一种品位，
-						<br/>&nbsp;&nbsp;左岸是一种情怀。
-					</strong>
-				</p>
-				<img img class ="page2_img1 ani" src='./img/page2_img1.jpg' swiper-animate-effect="rotateInUpLeft" swiper-animate-duration="1s" swiper-animate-delay="2s">
-				<img img class ="page2_img2 ani" src='./img/page2_img2.jpg' swiper-animate-effect="zoomInUp" swiper-animate-duration="1s" swiper-animate-delay="3s">				
-				<p class = "page2_list ani"id = "page2_list_1" swiper-animate-effect="bounceInLeft" swiper-animate-duration="1s" swiper-animate-delay="6.5s">70%直接入读精英院校</p>
-				<p class = "page2_list ani"id = "page2_list_2" swiper-animate-effect="bounceInRight" swiper-animate-duration="1s" swiper-animate-delay="7s">30%是法语专业本科生</p>
-				<p class = "page2_list ani"id = "page2_list_3" swiper-animate-effect="bounceInLeft" swiper-animate-duration="1s" swiper-animate-delay="7.5s">100%的学生获得了签证</p>
-				<p class = "page2_list ani"id = "page2_list_4" swiper-animate-effect="bounceInRight" swiper-animate-duration="1s" swiper-animate-delay="8s">数百例真实精英院校成功案例</p>
-				<p class = "page2_list ani"id = "page2_list_5" swiper-animate-effect="bounceInLeft" swiper-animate-duration="1s" swiper-animate-delay="8.5s">左岸团队涵盖工商文理四大方向</p>
-			</div>
-        </div>
-        <div class="swiper-slide" style="background:#aa1913;">
 		    <div class="page3_content">
-			<p class = "page3_title ani" swiper-animate-effect="zoomInDown" swiper-animate-duration="3s" swiper-animate-delay="1s"><strong>左岸理念</strong></p>
+				<p class = "page3_title ani" swiper-animate-effect="zoomInDown" swiper-animate-duration="0.5s" swiper-animate-delay="1s">
+				<strong>左岸理念</strong>
+				</p>
 				<img class ="zuoan_logo ani" src='./img/logo.png' alt="zuoan_logo" swiper-animate-effect="bounceIn" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">
-				<div class ="page3_middle ani" swiper-animate-effect="zoomInLeft" swiper-animate-duration="3s" swiper-animate-delay="1.5s">
-					<div class="page3_animated">
-						<p>真诚</p><br/>
-						<p>左岸团队都是法国留学生出身，我们深切地体会到留学是一个影响终生的重大抉择
-						学生和家长需要的是真实有效的信息，过来人的经验之谈，而不是百度上混淆视听的虚假信息和部分中介的吹嘘欺骗
-						左岸承诺，我们提供的一切信息都是真实有效的，并尽可能的添加上数据来源和官方网站，确保信息有据可考</p>
-					</div>
-					<div class="page3_animated">
-						<p>专业</p><br/>
-						<p>
-						左岸团队涵盖工商文理四大专业，不乏在大型中介公司工作多年的资深顾问
-						左岸也是目前国内极少数专注于法国留学的咨询公司，在高端细分市场上处于领先地位
-						在法国留学这个小众领域里，左岸留学团队凭借着团队成员在法国长期的学习生活经历，和在国内从事多年留学咨询行业的工作经验，树立了良好的口碑
-						</p>
-					</div>
-					<div class="page3_animated">
-						<p>共赢</p><br/>
-						<p>	
-						与一般留学机构不一样的是，左岸留学不把学生看做“客户”，
-						而是希望能跟学生成为朋友。绝大部分中介在签证到手之后
-						与学生的合作关系就戛然而止，不再过问。而左岸的理念是“共赢”，
-						我们希望学生能在法国顺利生活，并在实习和工作的时候提供帮助，扩展“顶英计划”这一独特的交流平台，实现自我价值
-						</p>
-					</div>					
+				<div class="page3_middle">
+					<ol class="rounded-list">
+						<li>
+							<p class = "page3_list1 page3_list ani" swiper-animate-effect="bounceInRight" swiper-animate-duration="0.5s" swiper-animate-delay="1.5s">真诚</p>
+							<p class = "page3_list2 page3_list ani" swiper-animate-effect="bounceInRight" swiper-animate-duration="0.5s" swiper-animate-delay="1.5s">我们都是法国留学生，信息有据可考</p>
+						</li>
+						<li>
+							<p class = "page3_list3 page3_list ani" swiper-animate-effect="bounceInRight" swiper-animate-duration="1.0s" swiper-animate-delay="1.5s">专业</p>
+							<p class = "page3_list4 page3_list ani" swiper-animate-effect="bounceInRight" swiper-animate-duration="1.0s" swiper-animate-delay="1.5s">专注于法国留学咨询，树立良好口碑</p>
+						</li>
+						<li>
+							<p class = "page3_list5 page3_list ani" swiper-animate-effect="bounceInRight" swiper-animate-duration="1.5s" swiper-animate-delay="1.5s">共赢</p>
+							<p class = "page3_list6 page3_list ani" swiper-animate-effect="bounceInRight" swiper-animate-duration="1.5s" swiper-animate-delay="1.5s">与学生交朋友，帮助法国生活、实习和工作</p>
+						</li>
+					</ol>
 				</div>
-				Slide 3
 			</div>
         </div>
+		<!-- page4 -->
         <div class="swiper-slide">
             <div class="page4_content">
-                <div class="page4_top">
-                    <div  id="page4_top_left" class="page4_top_left">
-                    </div>
-                    <div class="page4_top_right">
-                        <ol class="rounded-list">
-                            <li>
-                                <p class = "page4_list1 page4_list ani" swiper-animate-effect="bounceInRight" swiper-animate-duration="1s" swiper-animate-delay="1s">最好的高校</p>
-                            </li>
-                                <p class = "page4_list2 page4_list_content ani" swiper-animate-effect="bounceInRight" swiper-animate-duration="1s" swiper-animate-delay="2.5s">HEC</p>
-                            <li>
-                                <p class = "page4_list3 page4_list ani" swiper-animate-effect="bounceInRight" swiper-animate-duration="1s" swiper-animate-delay="1.5s">最好的工程师学校</p>
-                            </li>
-                                <p class = "page4_list4 page4_list_content ani" swiper-animate-effect="bounceInRight" swiper-animate-duration="1s" swiper-animate-delay="2.5s">Paristah</p>
-                            <li>
-                                <p class = "page4_list5 page4_list ani" swiper-animate-effect="bounceInRight" swiper-animate-duration="1s" swiper-animate-delay="2s">最好的政治学校</p>
-                            </li>
-                                <p class = "page4_list6 page4_list_content ani" swiper-animate-effect="bounceInRight" swiper-animate-duration="1s" swiper-animate-delay="2.5s">Science Ro</p>
-                        </ol>
-                    </div>
+				<img class ="zuoan_logo ani" src='./img/logo.png' alt="zuoan_logo" swiper-animate-effect="bounceIn" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">
+				<div class="page4_top" id="page4_top">
                 </div>
                 <div class="page4_down">
-                    <div class="page4_down_left">
-                        <p class = "page4_button1 page4_button ani" swiper-animate-effect="bounceInLeft" swiper-animate-duration="1s" swiper-animate-delay="1s">学制</p>
-                        <p class = "page4_button2 page4_button ani" swiper-animate-effect="bounceInLeft" swiper-animate-duration="1s" swiper-animate-delay="1.5s">实习</p>
-                        <p class = "page4_button3 page4_button ani" swiper-animate-effect="bounceInLeft" swiper-animate-duration="1s" swiper-animate-delay="2s">学费</p>
-                        <p class = "page4_button4 page4_button ani" swiper-animate-effect="bounceInLeft" swiper-animate-duration="1s" swiper-animate-delay="2.5s">排名</p>
-                    </div>
-                    <div class="page4_down_right">
-						<p class="page4_down_right_title ani" swiper-animate-effect="bounceInDown" swiper-animate-duration="1s" swiper-animate-delay="3s">五个择校的理由</p>
-						<div class="page4_down_right_circle ani" swiper-animate-effect="fadeIn" swiper-animate-duration="1s" swiper-animate-delay="4s"></div>
-						<div class="page4_down_right_reason page4_down_right_reason1 ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="1s" swiper-animate-delay="4s">食堂好</div>
-						<div class="page4_down_right_reason page4_down_right_reason2 ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="1s" swiper-animate-delay="4s">有钱途</div>
-						<div class="page4_down_right_reason page4_down_right_reason3 ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="1s" swiper-animate-delay="4s">有妹子</div>
-						<div class="page4_down_right_reason page4_down_right_reason4 ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1s" swiper-animate-delay="4s">有妹子</div>
-						<div class="page4_down_right_reason page4_down_right_reason5 ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1s" swiper-animate-delay="4s">有妹子</div>
-                	</div>
+					<p class = "page4_button1 page4_button ani" swiper-animate-effect="bounceInLeft" swiper-animate-duration="1s" swiper-animate-delay="1s">学制</p>
+					<p class = "page4_button2 page4_button ani" swiper-animate-effect="bounceInLeft" swiper-animate-duration="1s" swiper-animate-delay="1.1s">实习</p>
+					<p class = "page4_button3 page4_button ani" swiper-animate-effect="bounceInLeft" swiper-animate-duration="1s" swiper-animate-delay="1.2s">学费</p>
+					<p class = "page4_button4 page4_button ani" swiper-animate-effect="bounceInLeft" swiper-animate-duration="1s" swiper-animate-delay="1.3s">排名</p>
             	</div>
         	</div>
         </div>
-        <div class="swiper-slide" style="background: aquamarine;">
+		<!-- page5 -->
+		<div class="swiper-slide" style="background: aquamarine;">
 			<div class="page5_content">
+				<img class ="zuoan_logo ani" src='./img/logo.png' alt="zuoan_logo" swiper-animate-effect="bounceIn" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">
 				<div class="page5_up">
 					<div class="page5_up_1">
-						<img class ="page_2_logo ani" src="src/img/page_2_logo.png " alt="page_2_logo" width="100%" height="100%" swiper-animate-effect="swing" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">
 					</div>
 					<div class="page5_up_2">
 						<img class ="web_addr ani" src="src/img/web_addr.png" alt="web_addr" width="100%" height="100%" swiper-animate-effect="fadeInUp" swiper-animate-duration="1.5s" swiper-animate-delay="2.5s">
@@ -147,20 +97,11 @@
 					<div class="page5_mid_5">
 						<img class ="wechat_no ani" src="src/img/wechat_no.png" alt="wechat_no" width="100%" height="100%" swiper-animate-effect="fadeInDown" swiper-animate-duration="1.5s" swiper-animate-delay="2.5s">
 					</div>
-					<div class="page5_mid_1">
-						<img class ="red_balloon ani" src="src/img/red_balloon.png" alt="red_balloon" width="200px" height="200px" swiper-animate-effect="bounceIn" swiper-animate-duration="0.5s" swiper-animate-delay="0.6s">
-					</div>
-					<div class="page5_mid_2">
-						<img class ="white_balloon ani" src="src/img/white_balloon.png" alt="white_balloon" width="200px" height="200px" swiper-animate-effect="bounceIn" swiper-animate-duration="0.5s" swiper-animate-delay="0.9s">
-					</div>
-					<div class="page5_mid_3">
-						<img class ="blue_balloon ani" src="src/img/blue_balloon.png" alt="blue_balloon" width="200px" height="200px" swiper-animate-effect="bounceIn" swiper-animate-duration="0.5s" swiper-animate-delay="1.2s">
-					</div>
-					<div class="page5_mid_4">
-						<img class ="page5_tower ani" src="src/img/page5_tower.png" alt="tower" width="250px" height="250px" swiper-animate-effect="bounceInUp" swiper-animate-duration="0.5s" swiper-animate-delay="1.5s">
-					</div>
+					<img class ="red_balloon ani" src="src/img/red_balloon.png" alt="red_balloon" width="300px" height="300px" swiper-animate-effect="bounceIn" swiper-animate-duration="0.5s" swiper-animate-delay="0.6s">
+					<img class ="white_balloon ani" src="src/img/white_balloon.png" alt="white_balloon" width="300px" height="300px" swiper-animate-effect="bounceIn" swiper-animate-duration="0.5s" swiper-animate-delay="0.9s">
+					<img class ="blue_balloon ani" src="src/img/blue_balloon.png" alt="blue_balloon" width="300px" height="300px" swiper-animate-effect="bounceIn" swiper-animate-duration="0.5s" swiper-animate-delay="1.2s">
+					<img class ="page5_tower ani" src="src/img/page5_tower.png" alt="tower" swiper-animate-effect="bounceInUp" swiper-animate-duration="0.5s" swiper-animate-delay="1.5s">
 				</div>
-
 				<div class="page5_down">
 					<div class="page5_down_1">
 						<img class ="telephone_pic ani" src="src/img/telephone_pic.png" alt="telephone_pic" width="40%" height="40%" swiper-animate-effect="tada" swiper-animate-duration="1.0s" swiper-animate-delay="4.0s">
